Autenticacion con google

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F1F1F1"
     tools:context=".AuthActivity">
 
     <LinearLayout
+        android:id="@+id/auth_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,9 +48,9 @@
                 android:id="@+id/btn_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Registrar"
                 android:layout_weight="1"
                 android:background="@android:color/holo_blue_bright"
+                android:text="Registrar"
                 android:textColor="@android:color/white"/>
 
             <Space
@@ -61,13 +62,22 @@
                 android:id="@+id/btn_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Acceder"
                 android:layout_weight="1"
                 android:background="@android:color/holo_green_light"
-                android:textColor="@android:color/white"/>
-
+                android:text="Acceder"
+                android:textColor="@android:color/white" />
 
         </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_google"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:drawableStart="@drawable/google"
+            android:text="GOOGLE" />
 
     </LinearLayout>
 
